--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,19 @@
-#spring.datasource.url=jdbc:mysql://172.17.0.1:3306/musicdb?useSSL=false
-#spring.datasource.username=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#server.port=8070
-
-spring.application.name=MuzixMongoDB
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=music
-spring.data.mongodb.repositories.enabled=true
-spring.datasource.driver-class-name=mongodb.jdbc.MongoDrive
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/musicdb?useSSL=false
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+server.port=8070
 
 track.id1:1
 track.name1:Closer
 track.Comment1:Unknown Artist
 
-
-
 track.id2:2
 track.name2:Dhekho Na
 track.Comment2:pagalworld
 
-
 track.id3:3
 track.name4:Shape of u
 track.Comment3:pagalworld
-
 
 
