--- a/pom.xml
+++ b/pom.xml
@@ -20,35 +20,27 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.plugin</groupId>
 			<artifactId>spring-plugin-core</artifactId>
 			<version>1.2.0.RELEASE</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
-		<!--        <dependency>-->
-		<!--            <groupId>org.springframework.data</groupId>-->
-		<!--            <artifactId>spring-data-jpa</artifactId>-->
-		<!--            <version>2.1.7.RELEASE</version>-->
-		<!--        </dependency>-->
+
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>2.13.0</version>
 		</dependency>
-
-
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-
-
-
 
 		<dependency>
 			<groupId>org.javassist</groupId>
@@ -56,13 +48,17 @@
 			<version>3.18.2-GA</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -70,8 +66,6 @@
 			<version>2.6.1</version>
 			<scope>compile</scope>
 		</dependency>
-
-
 
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -85,102 +79,7 @@
 			<version>1.18.6</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-			<version>2.1.3.RELEASE</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.9.1</version>
-		</dependency>
-
 	</dependencies>
-	<!--		<dependency>-->
-<!--		<groupId>org.springframework.boot</groupId>-->
-<!--		<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--	</dependency>-->
-<!--	<dependency>-->
-<!--		<groupId>org.springframework.boot</groupId>-->
-<!--		<artifactId>spring-boot-starter-web</artifactId>-->
-<!--	</dependency>-->
-
-<!--	&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa &ndash;&gt;-->
-<!--	<dependency>-->
-<!--		<groupId>org.springframework.data</groupId>-->
-<!--		<artifactId>spring-data-jpa</artifactId>-->
-<!--		<version>2.1.7.RELEASE</version>-->
-<!--	</dependency>-->
-
-<!--	&lt;!&ndash; https://mvnrepository.com/artifact/org.projectlombok/lombok &ndash;&gt;-->
-<!--	<dependency>-->
-<!--		<groupId>org.projectlombok</groupId>-->
-<!--		<artifactId>lombok</artifactId>-->
-<!--		<version>1.18.6</version>-->
-<!--		<scope>provided</scope>-->
-<!--	</dependency>-->
-<!--&lt;!&ndash;	&lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;		<groupId>mysql</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;		<artifactId>mysql-connector-java</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
-
-
-
-<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;		<groupId>com.h2database</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;		<artifactId>h2</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;		<scope>runtime</scope>&ndash;&gt;-->
-<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
-<!--	<dependency>-->
-<!--		<groupId>org.springframework.boot</groupId>-->
-<!--		<artifactId>spring-boot-starter-test</artifactId>-->
-<!--		<scope>test</scope>-->
-<!--	</dependency>-->
-<!--	&lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;-->
-<!--	<dependency>-->
-<!--		<groupId>mysql</groupId>-->
-<!--		<artifactId>mysql-connector-java</artifactId>-->
-<!--		<version>8.0.13</version>-->
-<!--	</dependency>-->
-
-<!--	<dependency>-->
-<!--		<groupId>io.springfox</groupId>-->
-<!--		<artifactId>springfox-swagger2</artifactId>-->
-<!--		<version>2.6.1</version>-->
-<!--		<scope>compile</scope>-->
-<!--	</dependency>-->
-
-
-
-<!--	<dependency>-->
-<!--		<groupId>io.springfox</groupId>-->
-<!--		<artifactId>springfox-swagger-ui</artifactId>-->
-<!--		<version>2.6.1</version>-->
-<!--		<scope>compile</scope>-->
-<!--	</dependency>-->
-<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;		<groupId>org.projectlombok</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;		<artifactId>lombok</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;		<version>1.18.6</version>&ndash;&gt;-->
-<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
-
-
-<!--&lt;!&ndash;		&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-context &ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;			<groupId>org.springframework</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<artifactId>spring-context</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;			<version>5.1.5.RELEASE</version>&ndash;&gt;-->
-<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->
-
-
-
-<!--	</dependencies>-->
-
-
 
 	<build>
 		<plugins>
