--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,10 @@ track.id2:2
 track.name2:Dhekho Na
 track.Comment2:pagalworld
 
-track.id3:3
-track.name4:Shape of u
-track.Comment3:pagalworld
+track1.id3:3
+track1.name4:Shape of u
+track1.Comment3:pagalworld
 
 
+exception.msg1:track not found exception
+exception.msg2:track already exist exception
